[package]
name = "docker-password-aya"
version = "0.1.0"
edition = "2018"
publish = false

[dependencies]
aya = { git = "https://github.com/aya-rs/aya", branch="main", features=["async_tokio"] }
docker-password-aya-common = { path = "../docker-password-aya-common", features=["user"] }
anyhow = "1.0.42"
bytes = "1"
tokio = { version = "1.9.0", features = ["full"] }

structopt = { version = "0.3"}

[[bin]]
name = "docker-password-aya"
path = "src/main.rs"
